--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="tooltip--triangle"></div>
                   </div>
                   <img
-                    src="img/2.svg"
+                    src="img/2.png"
                     loading="lazy"
                     alt=""
                     class="hero-column--img"
