--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@
                   
                 </div>
               </div>
+              <div class="colorful-button--wrapper">
+                    <div class="colorful-button--color red"></div>
+                    <div class="colorful-button--color orange"></div>
+                    <div class="colorful-button--color yellow"></div>
+                    <div class="colorful-button--color green"></div>
+                  </div>
             </div>
             <div class="column-planet--wrap">
               <div id="fade-load" class="column-planet--imgs">
